--- a/templates/aromaterapevtska.html
+++ b/templates/aromaterapevtska.html
@@ -167,10 +167,10 @@
 </head>
 <body>
     <header>
-        <h1>Masažni Salon</h1>
-        <p>Popoln odpočitek za vaše telo in dušo</p>
-        <a href="login.html" class="login-button">Prijava</a>
-
+        <div class="container">
+            <h1>Masažni Salon</h1>
+            <p>Popoln odpočitek za vaše telo in dušo</p>
+        </div>
     </header>
     
     <nav>
