--- a/templates/sportska.html
+++ b/templates/sportska.html
@@ -168,9 +168,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Masažni Salon Oaza Spokoja</h1>
+            <h1>Masažni Salon</h1>
             <p>Popoln odpočitek za vaše telo in dušo</p>
-            <a href="login.html" class="login-button">Prijava</a>
         </div>
     </header>
 
