--- a/templates/sportska.html
+++ b/templates/sportska.html
@@ -230,7 +230,7 @@
                     </tbody>
                 </table>
 
-                <a href="#rezervacija" class="btn">Rezervirajte termin</a>
+                <a class="btn" href="rezervacija.html">Rezervirajte termin</a>
             </div>
         </section>
     </main>
