--- a/templates/tajska.html
+++ b/templates/tajska.html
@@ -222,7 +222,7 @@
                 </tr>
             </table>
             
-            <a href="#rezervacija" class="btn">Rezervirajte termin</a>
+            <a class="btn" href="rezervacija.html">Rezervirajte termin</a>
         </div>
     </div>
 
