--- a/templates/index.html
+++ b/templates/index.html
@@ -22,14 +22,16 @@
     }
 
     header h1 {
-      margin: 0;
-      font-size: 2rem;
+      margin: 1;
+      font-size: 3rem;
+      display: flex;
+      justify-content: center;
     }
 
     .login-button {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 62px;
+      right: 40px;
       background-color: white;
       color: #009688;
       padding: 10px 18px;
@@ -38,6 +40,7 @@
       font-weight: 500;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       transition: all 0.3s ease;
+      margin: 2;
     }
 
     .login-button:hover {
@@ -146,13 +149,6 @@
         Prijava
       {% endif %}
     </a>
-    <nav>
-      <ul>
-        <li><a href="#">Domov</a></li>
-        <li><a href="#">Storitve</a></li>
-        <li><a href="#">Kontakt</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
