--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <header>
-    <h1>Masažni salon</h1>
+    <h1>Masažni salon FIZIO SANITAS</h1>
     <a href="login.html" class="login-button">
       {% if request.args.get('username') %}
         Pozdravljen, {{ request.args.get('username') }}
