--- a/templates/tajska.html
+++ b/templates/tajska.html
@@ -166,7 +166,7 @@
 </head>
 <body>
     <header>
-        <h1>Masažni Salon</h1>
+        <h1>Masažni salon FIZIO SANITAS</h1>
         <p>Popoln odpočitek za vaše telo in dušo</p>
     </header>
     
