--- a/templates/sportska.html
+++ b/templates/sportska.html
@@ -168,7 +168,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Masažni Salon</h1>
+            <h1>Masažni salon FIZIO SANITAS</h1>
             <p>Popoln odpočitek za vaše telo in dušo</p>
         </div>
     </header>
